Fixed the paging unit tests